# fztaosi

./: Cargo.toml  README.md  fztaosi.wasm  index.html
.rpm/: fztaosi.spec
src/: balls.rs  main.rs  music.rs  screen.rs  stars.rs  text.rs
